Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
Screen is corrupted because of incorrect calculation of first_line_bpg_offset for DSC 1.1
The calculation of the DSC parameter, first_line_bpg_offset, is not correct for DSC version 1.1 and may derive incorrect PPS values, that is, PPS4, PPS5, PPS6, and PPS7. It ends up with corrected display screen.