FROMLIST: drm/i915/dsi: Explicit first_line_bpg_offset assignment for DSI

Assign explicit value of 12 at 8bpp as per Table E2 of DSC 1.1 for DSI
panels even though we already use calculations from CModel for
first_line_bpg_offset.
The reason being some DSI monitors may have not have added the
change in errata for the calculation of first_line_bpg_offset.

Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/9102
Signed-off-by: Suraj Kandpal <suraj.kandpal@intel.com>
Tested-by: William Tseng <william.tseng@intel.com>
(am from https://patchwork.kernel.org/patch/13352812/)
(also found at https://lore.kernel.org/r/20230814125241.234238-1-suraj.kandpal@intel.com)

BUG=b:290863625
TEST=No noise displayed on screen after booting

Change-Id: I1ea280cf895db5dd04bc9591337d0cfbff505486
Signed-off-by: William Tseng <william.tseng@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4812862
Reviewed-by: Sean Paul <sean@poorly.run>
Reviewed-by: Shou-Chieh Hsu <shouchieh@chromium.org>
Tested-by: Jongpil Jung <jongpil19.jung@samsung.corp-partner.google.com>